# CUDApple

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/analyzer/: mod.rs
src/examples/: convolution.cu  convolution3d.cu  main.swift  matrix_add.cu  matrix_add_optimized.cu  matrix_multiply_optimized.cu
src/metal/: mod.rs
src/metal/templates/: metal_runner.swift
src/optimizer/: mod.rs
src/parser/: cuda_grammar.rs  cuda_parser.rs  lib.rs  metal_generator.rs  mod.rs  unified_ast.rs
tests/: emit_host.rs  emit_metal.rs  list_kernels.rs  print_ast.rs
